Update HTML file

--- a/Backup index Oct 21 5PM BUENAS.html
+++ b/Backup index Oct 21 5PM BUENAS.html
@@ -4,10 +4,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Prompt Library for Executive and Strategic Communications</title>
-
-<!-- Teams SDK -->
-<script src="https://res.cdn.office.net/teams-js/2.0.0/js/MicrosoftTeams.min.js" crossorigin="anonymous"></script>
-
 <style>
 :root{--bg:#f6f7fb;--text:#0f172a;--muted:#64748b;--card:#ffffff;--border:#e5e7eb;--accent:#2563eb;--shadow:0 10px 30px rgba(2,6,23,.08)}
 @media (prefers-color-scheme: dark){:root{--bg:#0b1020;--text:#e5e7eb;--muted:#9aa4b2;--card:#0f152a;--border:#1f2937;--accent:#60a5fa;--shadow:0 10px 30px rgba(0,0,0,.35)}}
@@ -17,7 +13,7 @@ html,body{height:100%}
 body{margin:0;background:var(--bg);color:var(--text);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial,Noto Sans,Helvetica Neue,sans-serif;line-height:1.6;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
 .container{max-width:980px;margin:48px auto;padding:0 20px}
 .card{background:var(--card);border:1px solid var(--border);border-radius:16px;box-shadow:var(--shadow);overflow:hidden}
-.toolbar{display:flex;gap:12px;justify-content:space-between;align-items:center;padding:14px 18px;border-bottom:1px solid var(--border)}
+.toolbar{display:flex;gap:12px;justify-content:space-between;align-items:center;padding:14px 18px;border-bottom:1px solid var(--border);position:sticky;top:0;background:transparent;z-index:10}
 .title{font-weight:700;letter-spacing:.2px}
 .title small{display:block;color:var(--muted);font-weight:500}
 .actions{display:flex;gap:8px;align-items:center}
@@ -41,10 +37,6 @@ li{margin:8px 0}
 .prompt-text:hover{background-color:rgba(37,99,235,.08)}
 .prompt-text.copied{background-color:rgba(96,165,250,.15)}
 .prompt-text.copied::after{content:' Copied!';color:var(--accent);font-weight:700;margin-left:6px}
-.send-btn{margin-left:8px;border:1px solid var(--border);background:transparent;color:var(--accent);
-  padding:4px 8px;border-radius:6px;cursor:pointer;font-size:13px;opacity:0;transition:opacity .2s ease}
-li:hover .send-btn{opacity:1}
-.send-btn:hover{background-color:rgba(37,99,235,.08)}
 .video-btn{display:inline-flex;align-items:center;gap:6px;margin:12px 0;padding:10px 16px;font-size:15px;border-radius:8px;background:var(--accent);color:#fff;border:none;cursor:pointer;box-shadow:var(--shadow)}
 .video-btn:hover{filter:brightness(1.05)}
 .video-btn svg{width:18px;height:18px;fill:#fff}
@@ -55,85 +47,103 @@ li:hover .send-btn{opacity:1}
 <div class="card">
 <div class="toolbar">
 <div class="title">Prompt Library<span class="sr-only"></span><small>AURA</small></div>
-<div class="actions"><button id="themeBtn" aria-label="Toggle theme"><span id="themeLabel">Auto</span> theme</button></div>
+<div class="actions">
+<button id="themeBtn" aria-label="Toggle theme"><span id="themeLabel">Auto</span> theme</button>
 </div>
-
+</div>
 <div class="content">
 <p>Prompt Library for AURA ecosystem</p>
-<p class="intro">This library organizes AURA prompts into categories to support reporting, internal communications, monitoring, and stakeholder engagement.</p>
+<p class="intro">This library organizes AURA prompts into categories to support reporting, internal communications, monitoring, and stakeholder engagement. Each category includes examples and can be expanded based on use case.</p>
 
-<!-- === A === -->
+<!-- A -->
 <details>
 <summary>A. MBR Insights (Iris)</summary>
 <div class="details-body">
 <p>For VP/CVP-level audiences, focusing on MBR summaries:</p>
 <ul>
-<li><span class="prompt-text" data-copy>Ask agent Iris to provide an executive summary that organizes top 5 Highlights insights and top 5 lowlights for separated by MCA, Per Seat, and Marketplace.</span>
-<button class="send-btn" data-send="Ask agent Iris to provide an executive summary that organizes top 5 Highlights insights and top 5 lowlights for separated by MCA, Per Seat, and Marketplace.">Send to Chat</button></li>
-<li><span class="prompt-text" data-copy>Ask agent Iris to draft a CVP-level briefing that highlights overall sentiment tone, risks, opportunities, and next steps on [launch].</span>
-<button class="send-btn" data-send="Ask agent Iris to draft a CVP-level briefing that highlights overall sentiment tone, risks, opportunities, and next steps on [launch].">Send to Chat</button></li>
-<li><span class="prompt-text" data-copy>Ask agent Iris to draft an email for CVPs summarizing the impact of [initiative] with a call to action.</span>
-<button class="send-btn" data-send="Ask agent Iris to draft an email for CVPs summarizing the impact of [initiative] with a call to action.">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Ask agent Iris to provide an executive summary that organizes top 5 Highlights insights and top 5 lowlights for separated by MCA, Per Seat, and Marketplace.</span></li>
+<li><span class="prompt-text" data-copy>Ask agent Iris to draft a CVP-level briefing that highlights overall sentiment tone, risks, opportunities, and next steps on [launch].</span></li>
+<li><span class="prompt-text" data-copy>Ask agent Iris to draft an email for CVPs summarizing the impact of [initiative] with a call to action.</span></li>
+<li><span class="prompt-text" data-copy>As agent Iris to pull an executive summary of this week’s insights keyword [subject].</span></li>
+<li><span class="prompt-text" data-copy>Ask agent Iris to give me a full report on [topic] across MCA per-seat.</span></li>
+<li><span class="prompt-text" data-copy>Ask agent Iris What’s the overall sentiment trend for [keyword] this month?</span></li>
 </ul>
 </div>
 </details>
 
-<!-- === B === -->
+<!-- B -->
 <details>
 <summary>B. Marketplace Prompts (Frida)</summary>
 <div class="details-body">
 <p>For Marketplace topics related with public, private, and customer support:</p>
 <ul>
-<li><span class="prompt-text" data-copy>Ask Frida to Draft an email for CVPs summarizing the impact of [initiative] with a call to action.</span>
-<button class="send-btn" data-send="Ask Frida to Draft an email for CVPs summarizing the impact of [initiative] with a call to action.">Send to Chat</button></li>
-<li><span class="prompt-text" data-copy>Ask Frida to Summarize the top Benefits for Marketplace, particularly [keyword].</span>
-<button class="send-btn" data-send="Ask Frida to Summarize the top Benefits for Marketplace, particularly [keyword].">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Ask Frida to Draft an email for CVPs summarizing the impact of [initiative] with a call to action.</span></li>
+<li><span class="prompt-text" data-copy>Ask Frida to Summarize the top Benefits for Marketplace, particularly [keyword].</span></li>
+<li><span class="prompt-text" data-copy>Highlight analyst concerns or praise around [announcement] from the last 30 days.</span></li>
+<li><span class="prompt-text" data-copy>Compare analyst tone on [subject] across Gartner, Forrester, and IDC.</span></li>
 </ul>
 </div>
 </details>
 
-<!-- === C === -->
+<!-- C -->
 <details>
 <summary>C. Commerce Prompts (Gibbs)</summary>
 <div class="details-body">
 <p>Focused on third-party insights and competitive intelligence:</p>
 <ul>
-<li><span class="prompt-text" data-copy>Summarize the top 3 insights from the latest analyst reports on [launch].</span>
-<button class="send-btn" data-send="Summarize the top 3 insights from the latest analyst reports on [launch].">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Summarize the top 3 insights from the latest analyst reports on [launch].</span></li>
+<li><span class="prompt-text" data-copy>Compare analyst tone on [subject] across Gartner, Forrester, and IDC.</span></li>
+<li><span class="prompt-text" data-copy>Highlight analyst concerns or praise around [announcement] from the last 30 days.</span></li>
 </ul>
 </div>
 </details>
 
-<!-- === D === -->
+<!-- D -->
 <details>
 <summary>D. Incident Management Prompts (Jasper)</summary>
 <div class="details-body">
 <p>For tracking press mentions and sentiment across regions:</p>
 <ul>
-<li><span class="prompt-text" data-copy>Ask Jasper to List all IcMs mentioning [subject] this week, broken down by Engineering team.</span>
-<button class="send-btn" data-send="Ask Jasper to List all IcMs mentioning [subject] this week, broken down by Engineering team.">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Ask Jasper to List all IcMs mentioning [subject] this week, broken down by Engineering team.</span></li>
+<li><span class="prompt-text" data-copy>Ask Jasper to give me Weekly ICM report.</span></li>
+<li><span class="prompt-text" data-copy>Ask Jasper to provide with my ICM incidents.</span></li>
+<li><span class="prompt-text" data-copy>What’s the theme for the last [] days?</span></li>
 </ul>
 </div>
 </details>
 
-<!-- === E === -->
+<!-- E -->
 <details>
 <summary>E. Other Resources</summary>
 <div class="details-body">
 <p>Additional reference materials and quick video demos:</p>
 <div style="text-align:center;">
   <button class="video-btn" onclick="window.open('https://www.youtube.com/watch?v=gfiUI2YLsgc','_blank')">
-    <svg viewBox='0 0 24 24'><path d='M8 5v14l11-7z'/></svg> Watch on YouTube
+    <svg viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg> Watch on YouTube
   </button>
-  <p style="color:var(--muted);font-size:14px;margin-top:8px;">Opens in a new tab for best playback inside Teams.</p>
+  <p style="color:var(--muted);font-size:14px;margin-top:8px;">
+    Opens in a new tab for best playback inside Teams.
+  </p>
 </div>
 </div>
 </details>
 
+<!-- F -->
+<details>
+<summary>F. Other Prompts</summary>
+<div class="details-body">
+<p>To capture partner dynamics:</p>
+<ul>
+<li><span class="prompt-text" data-copy>Highlight advantages of [ ] region.</span></li>
+</ul>
+</div>
+</details>
+
+<p>This library can be adapted for use in Copilot workflows, briefing templates, or automated reporting systems.</p>
 </div>
 </div>
 </div>
-<div class="footer">Hover any prompt and click it to copy, or use “Send to Chat”.</div>
+<div class="footer">Hover any prompt and click it to copy. A “Copied!” note will appear briefly.</div>
 
 <script>
 (function(){
@@ -149,32 +159,27 @@ li:hover .send-btn{opacity:1}
     else{root.setAttribute('data-theme',next);localStorage.setItem('theme',next);}
     themeLabel.textContent=next.charAt(0).toUpperCase()+next.slice(1);
   }
-  if(themeBtn){themeBtn.addEventListener('click',()=>{
-    var c=current();var next=c==='auto'?'light':(c==='light'?'dark':'auto');setTheme(next);
-  });}
+  if(themeBtn){
+    themeBtn.addEventListener('click',()=>{
+      var c=current();
+      var next=c==='auto'?'light':(c==='light'?'dark':'auto');
+      setTheme(next);
+    });
+  }
 
-  // Copy prompt
+  // Copy prompt handler
   document.addEventListener('click',function(e){
     const t=e.target;
     if(!(t&&t.matches('.prompt-text[data-copy]')))return;
     const txt=t.innerText;
     const markCopied=(el)=>{el.classList.add('copied');setTimeout(()=>el.classList.remove('copied'),1200)};
-    if(navigator.clipboard){navigator.clipboard.writeText(txt).then(()=>markCopied(t));}
-  });
-
-  // Teams SDK init
-  microsoftTeams.app.initialize().then(()=>console.log("Teams SDK ready")).catch(()=>{});
-
-  // Send to Chat
-  document.addEventListener('click',function(e){
-    const btn=e.target;
-    if(!(btn&&btn.matches('.send-btn[data-send]')))return;
-    const message=btn.getAttribute('data-send');
-    microsoftTeams.chat.openChat({message:message}).catch(err=>{
-      console.warn("Chat API not available, fallback:",err);
-      navigator.clipboard.writeText(message);
-      alert("Sent to Chat unavailable here; prompt copied to clipboard instead.");
-    });
+    if(navigator.clipboard&&navigator.clipboard.writeText){
+      navigator.clipboard.writeText(txt).then(()=>markCopied(t));
+    }else{
+      const ta=document.createElement('textarea');
+      ta.value=txt;document.body.appendChild(ta);ta.select();document.execCommand('copy');
+      document.body.removeChild(ta);markCopied(t);
+    }
   });
 })();
 </script>
