--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ li:hover .send-btn{opacity:1}
 .video-btn svg{width:18px;height:18px;fill:#fff}
 </style>
 </head>
+
 <body>
 <div class="container">
 <div class="card">
@@ -70,19 +71,14 @@ li:hover .send-btn{opacity:1}
 <ul>
 <li><span class="prompt-text" data-copy>Ask agent Iris to provide an executive summary that organizes top 5 Highlights insights and top 5 lowlights for separated by MCA, Per Seat, and Marketplace.</span>
 <button class="send-btn" data-send="Ask agent Iris to provide an executive summary that organizes top 5 Highlights insights and top 5 lowlights for separated by MCA, Per Seat, and Marketplace.">Send to Chat</button></li>
-
 <li><span class="prompt-text" data-copy>Ask agent Iris to draft a CVP-level briefing that highlights overall sentiment tone, risks, opportunities, and next steps on [launch].</span>
 <button class="send-btn" data-send="Ask agent Iris to draft a CVP-level briefing that highlights overall sentiment tone, risks, opportunities, and next steps on [launch].">Send to Chat</button></li>
-
 <li><span class="prompt-text" data-copy>Ask agent Iris to draft an email for CVPs summarizing the impact of [initiative] with a call to action.</span>
 <button class="send-btn" data-send="Ask agent Iris to draft an email for CVPs summarizing the impact of [initiative] with a call to action.">Send to Chat</button></li>
-
 <li><span class="prompt-text" data-copy>As agent Iris to pull an executive summary of this week’s insights keyword [subject].</span>
 <button class="send-btn" data-send="As agent Iris to pull an executive summary of this week’s insights keyword [subject].">Send to Chat</button></li>
-
 <li><span class="prompt-text" data-copy>Ask agent Iris to give me a full report on [topic] across MCA per-seat.</span>
 <button class="send-btn" data-send="Ask agent Iris to give me a full report on [topic] across MCA per-seat.">Send to Chat</button></li>
-
 <li><span class="prompt-text" data-copy>Ask agent Iris What’s the overall sentiment trend for [keyword] this month?</span>
 <button class="send-btn" data-send="Ask agent Iris What’s the overall sentiment trend for [keyword] this month?">Send to Chat</button></li>
 </ul>
@@ -97,13 +93,10 @@ li:hover .send-btn{opacity:1}
 <ul>
 <li><span class="prompt-text" data-copy>Ask Frida to Draft an email for CVPs summarizing the impact of [initiative] with a call to action.</span>
 <button class="send-btn" data-send="Ask Frida to Draft an email for CVPs summarizing the impact of [initiative] with a call to action.">Send to Chat</button></li>
-
 <li><span class="prompt-text" data-copy>Ask Frida to Summarize the top Benefits for Marketplace, particularly [keyword].</span>
 <button class="send-btn" data-send="Ask Frida to Summarize the top Benefits for Marketplace, particularly [keyword].">Send to Chat</button></li>
-
 <li><span class="prompt-text" data-copy>Highlight analyst concerns or praise around [announcement] from the last 30 days.</span>
 <button class="send-btn" data-send="Highlight analyst concerns or praise around [announcement] from the last 30 days.">Send to Chat</button></li>
-
 <li><span class="prompt-text" data-copy>Compare analyst tone on [subject] across Gartner, Forrester, and IDC.</span>
 <button class="send-btn" data-send="Compare analyst tone on [subject] across Gartner, Forrester, and IDC.">Send to Chat</button></li>
 </ul>
@@ -118,10 +111,8 @@ li:hover .send-btn{opacity:1}
 <ul>
 <li><span class="prompt-text" data-copy>Summarize the top 3 insights from the latest analyst reports on [launch].</span>
 <button class="send-btn" data-send="Summarize the top 3 insights from the latest analyst reports on [launch].">Send to Chat</button></li>
-
 <li><span class="prompt-text" data-copy>Compare analyst tone on [subject] across Gartner, Forrester, and IDC.</span>
 <button class="send-btn" data-send="Compare analyst tone on [subject] across Gartner, Forrester, and IDC.">Send to Chat</button></li>
-
 <li><span class="prompt-text" data-copy>Highlight analyst concerns or praise around [announcement] from the last 30 days.</span>
 <button class="send-btn" data-send="Highlight analyst concerns or praise around [announcement] from the last 30 days.">Send to Chat</button></li>
 </ul>
@@ -136,15 +127,12 @@ li:hover .send-btn{opacity:1}
 <ul>
 <li><span class="prompt-text" data-copy>Ask Jasper to List all IcMs mentioning [subject] this week, broken down by Engineering team.</span>
 <button class="send-btn" data-send="Ask Jasper to List all IcMs mentioning [subject] this week, broken down by Engineering team.">Send to Chat</button></li>
-
 <li><span class="prompt-text" data-copy>Ask Jasper to give me Weekly ICM report.</span>
 <button class="send-btn" data-send="Ask Jasper to give me Weekly ICM report.">Send to Chat</button></li>
-
-<li><span class="prompt-text" data-copy>Ask Jasper to provide with my ICM incidents.</span>
-<button class="send-btn" data-send="Ask Jasper to provide with my ICM incidents.">Send to Chat</button></li>
-
-<li><span class="prompt-text" data-copy>What’s the theme for the last [] days?</span>
-<button class="send-btn" data-send="What’s the theme for the last [] days?">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Ask Jasper to provide my ICM incidents.</span>
+<button class="send-btn" data-send="Ask Jasper to provide my ICM incidents.">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>What’s the theme for the last [ ] days?</span>
+<button class="send-btn" data-send="What’s the theme for the last [ ] days?">Send to Chat</button></li>
 </ul>
 </div>
 </details>
@@ -178,12 +166,11 @@ li:hover .send-btn{opacity:1}
 </div>
 </div>
 </div>
+
 <div class="footer">Hover any prompt and click it to copy, or use “Send to Chat”.</div>
 
 <script>
 (function(){
-  const botId = "2944efdc-b6da-4796-9b7e-216fab0baa58"; // Steve Copilot botId
-
   // Theme toggle
   const root=document.documentElement;
   const themeBtn=document.getElementById('themeBtn');
@@ -212,20 +199,15 @@ li:hover .send-btn{opacity:1}
   // Teams SDK init
   microsoftTeams.app.initialize().then(()=>console.log("Teams SDK ready")).catch(()=>{});
 
-  // Send to Chat using Teams deep link
+  // Send to Chat - Correct Copilot deep link
   document.addEventListener('click',function(e){
     const btn=e.target;
     if(!(btn&&btn.matches('.send-btn[data-send]')))return;
     const message=btn.getAttribute('data-send');
-    const encodedMsg=encodeURIComponent(message);
-    const deepLink=`https://teams.microsoft.com/l/chat/0/0?users=${botId}&message=${encodedMsg}`;
-    try {
-      window.open(deepLink,'_blank');
-    } catch(err){
-      console.warn("Deep link failed, fallback:",err);
-      navigator.clipboard.writeText(message);
-      alert("Unable to open Teams. Prompt copied to clipboard instead.");
-    }
+    const appId="2944efdc-b6da-4796-9b7e-216fab0baa58"; // Copilot app ID (same as manifest id)
+    const context={subEntityId:"chat",chatInput:message};
+    const deepLink=`https://teams.microsoft.com/l/entity/${appId}/index?context=${encodeURIComponent(JSON.stringify(context))}`;
+    window.open(deepLink,'_blank');
   });
 })();
 </script>
