Deploy static site: add HTML/CSS/JS

--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@ li:hover .send-btn{opacity:1}
 
 <!-- === A === -->
 <details>
-<summary>A. Orch-MCA Prompts</summary>
+<summary>A. Orch-MCA Expert Prompts</summary>
 <div class="details-body">
 <p>For billing, agreement, and commerce orchestration workflows:</p>
 <ul>
-<li><span class="prompt-text" data-copy>Ask Orch-MCA to list all active EA-to-MCA migration projects and their current completion percentage.</span>
-<button class="send-btn" data-send="Ask Orch-MCA to list all active EA-to-MCA migration projects and their current completion percentage.">Send to Chat</button></li>
-<li><span class="prompt-text" data-copy>Request Orch-MCA to summarize the top five customer objections to MCA adoption with suggested counter messages.</span>
-<button class="send-btn" data-send="Request Orch-MCA to summarize the top five customer objections to MCA adoption with suggested counter messages.">Send to Chat</button></li>
-<li><span class="prompt-text" data-copy>Instruct Orch-MCA to generate a weekly dashboard of billing profile issues by region and priority.</span>
-<button class="send-btn" data-send="Instruct Orch-MCA to generate a weekly dashboard of billing profile issues by region and priority.">Send to Chat</button></li>
-<li><span class="prompt-text" data-copy>Ask Orch-MCA to compare conversion rates for Direct and Indirect customers in the last quarter.</span>
-<button class="send-btn" data-send="Ask Orch-MCA to compare conversion rates for Direct and Indirect customers in the last quarter.">Send to Chat</button></li>
-<li><span class="prompt-text" data-copy>Ask Orch-MCA to summarize the top 3 policy changes impacting EA to MCA transition this month.</span>
-<button class="send-btn" data-send="Ask Orch-MCA to summarize the top 3 policy changes impacting EA to MCA transition this month.">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Ask Orch-MCA to list all at the differences between EA and MCA to explain to the customer.</span>
+<button class="send-btn" data-send="Ask Orch-MCA to list all at the differences between EA and MCA to explain to the customer..">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Request Orch-MCA to summarize the top five customer objections to migrate from EA to MCA with suggested counter messages.</span>
+<button class="send-btn" data-send="Request Orch-MCA to summarize the top five customer objections to migrate from EA to MCA with suggested counter messages.">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Instruct Orch-MCA to generate an Onboarding MCA plan for my customer explaining all the steps the customer need to take.</span>
+<button class="send-btn" data-send="Instruct Orch-MCA to generate an Onboarding MCA plan for my customer explaining all the steps the customer need to take.">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Ask Orch-MCA to find information about benefits of CAPT agreements and what is the process to make the implementation.</span>
+<button class="send-btn" data-send="Ask Orch-MCA to find information about benefits of CAPT agreements and what is the process to make the implementation.">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Ask Orch-MCA to summarize the top risks of migrating EA to MCA .</span>
+<button class="send-btn" data-send="Ask Orch-MCA to summarize the top risks of migrating EA to MCA,">Send to Chat</button></li>
 </ul>
 </div>
 </details>
@@ -72,14 +72,14 @@ li:hover .send-btn{opacity:1}
 <div class="details-body">
 <p>For Marketplace offer coordination and partner enablement:</p>
 <ul>
-<li><span class="prompt-text" data-copy>Ask Orch-Marketplace to list top Marketplace offers expiring within 30 days and notify responsible owners.</span>
-<button class="send-btn" data-send="Ask Orch-Marketplace to list top Marketplace offers expiring within 30 days and notify responsible owners.">Send to Chat</button></li>
-<li><span class="prompt-text" data-copy>Request Orch-Marketplace to summarize private offer volume trends and MACC alignment percentage for FY26 Q1.</span>
-<button class="send-btn" data-send="Request Orch-Marketplace to summarize private offer volume trends and MACC alignment percentage for FY26 Q1.">Send to Chat</button></li>
-<li><span class="prompt-text" data-copy>Instruct Orch-Marketplace to identify co-sell partners with pending tax or FX validation issues.</span>
-<button class="send-btn" data-send="Instruct Orch-Marketplace to identify co-sell partners with pending tax or FX validation issues.">Send to Chat</button></li>
-<li><span class="prompt-text" data-copy>Ask Orch-Marketplace to draft a summary of Marketplace customer feedback from the last seven days.</span>
-<button class="send-btn" data-send="Ask Orch-Marketplace to draft a summary of Marketplace customer feedback from the last seven days.">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Ask Orch-Marketplace to list top Marketplace business benefits to the customers.</span>
+<button class="send-btn" data-send="Ask Orch-Marketplace to list top Marketplace business benefits to the customers.">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Request Orch-Marketplace to summarize differences versus private offer and private offers.</span>
+<button class="send-btn" data-send="Request Orch-Marketplace to summarize differences versus private offer and private offers.">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Instruct Orch-Marketplace to explain the customer objections to adopt Marketplace and counter message .</span>
+<button class="send-btn" data-send="Instruct Orch-Marketplace to explain the customer objections to adopt Marketplace and counter message.">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Ask Orch-Marketplace to draft a summary of Marketplace benefits focused on Procurement and Finance.</span>
+<button class="send-btn" data-send="Ask Orch-Marketplace to draft a summary of Marketplace benefits focused on Procurement and Finance.">Send to Chat</button></li>
 <li><span class="prompt-text" data-copy>Ask Orch-Marketplace to generate a comparison of offer activation rates across regions for top five ISVs.</span>
 <button class="send-btn" data-send="Ask Orch-Marketplace to generate a comparison of offer activation rates across regions for top five ISVs.">Send to Chat</button></li>
 </ul>
@@ -112,16 +112,16 @@ li:hover .send-btn{opacity:1}
 <div class="details-body">
 <p>For executive summaries and cross-agent analytics:</p>
 <ul>
-<li><span class="prompt-text" data-copy>Ask Orch-Insights to combine data from MCA and Marketplace agents into a single monthly MBR deck.</span>
-<button class="send-btn" data-send="Ask Orch-Insights to combine data from MCA and Marketplace agents into a single monthly MBR deck.">Send to Chat</button></li>
-<li><span class="prompt-text" data-copy>Request Orch-Insights to summarize partner sentiment across LATAM based on the latest survey inputs.</span>
-<button class="send-btn" data-send="Request Orch-Insights to summarize partner sentiment across LATAM based on the latest survey inputs.">Send to Chat</button></li>
-<li><span class="prompt-text" data-copy>Instruct Orch-Insights to generate a cross-agent performance summary showing uptime and response accuracy.</span>
-<button class="send-btn" data-send="Instruct Orch-Insights to generate a cross-agent performance summary showing uptime and response accuracy.">Send to Chat</button></li>
-<li><span class="prompt-text" data-copy>Ask Orch-Insights to identify common keywords or themes across Frida, Iris, and Jasper reports.</span>
-<button class="send-btn" data-send="Ask Orch-Insights to identify common keywords or themes across Frida, Iris, and Jasper reports.">Send to Chat</button></li>
-<li><span class="prompt-text" data-copy>Ask Orch-Insights to produce an executive summary for LT showing trends and risk hot spots across all agents.</span>
-<button class="send-btn" data-send="Ask Orch-Insights to produce an executive summary for LT showing trends and risk hot spots across all agents.">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Ask Orch-Insights to provide a summary of the Highlights and LowLights for MBR.</span>
+<button class="send-btn" data-send="Ask Orch-Insights to provide a summary of the Highlights and LowLights for MBR.">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Request Orch-Insights to summarize any customer sentiment across LATAM based on the latest insight inputs.</span>
+<button class="send-btn" data-send="Request Orch-Insights to summarize any customer sentiment across LATAM based on the latest insight inputs.">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Instruct Orch-Insights to generate a report showing Learnings for the last month.</span>
+<button class="send-btn" data-send="Instruct Orch-Insights to generate a report showing Learnings for the last month.">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Ask Orch-Insights to identify common keywords or themes across all insights for the last month.</span>
+<button class="send-btn" data-send="Ask Orch-Insights to identify common keywords or themes across all insights for the last month.">Send to Chat</button></li>
+<li><span class="prompt-text" data-copy>Ask Orch-Insights to produce an executive summary for LT showing trends and risk across all customers.</span>
+<button class="send-btn" data-send="Ask Orch-Insights to produce an executive summary for LT showing trends and risk across all customers.">Send to Chat</button></li>
 </ul>
 </div>
 </details>
